recover overflow area during incr. reflows in table frames, bug 219220 r/sr=dbaron